text truncate fixes, created new div for card content

--- a/HomePage.css
+++ b/HomePage.css
@@ -118,6 +118,9 @@ text-overflow: ellipsis;
     
   
 } 
+.card-text1{
+    width: 125px;
+}
 .img-card{
     width:100%
     
